appId: dev.moritzbrantner.myfarm
---
- launchApp
- assertVisible: "My Farm"
- assertVisible: "Connect"
- tapOn: "http://.*:8081"
- eraseText
- inputText: "http://10.0.2.2:8081"
- tapOn: "Connect"
- assertVisible: "Start Farm"
- tapOn: "New Farm"
- assertVisible: "Select"
- assertVisible: "Plant"
- assertVisible: "Harvest"
- assertVisible: "Build"
- assertVisible: "Empty Field Plot"
- tapOn: "Plant"
- assertVisible: "Wheat"
- tapOn: "Menu"
- assertVisible: "Start Farm"
